Fixed up alignment issues on homepage and with footer on smaller screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,4 +24,6 @@
   /* Apply the font size using rem */
 html {
     font-size: var(--base-font-size);
+    background-color: black;
+    overflow-y: auto;
 }
